--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "clsx": "^2.1.1",
     "framer-motion": "^11.2.5",
     "geist": "^1.3.0",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.378.0",
     "next": "14.2.3",
     "next-themes": "^0.3.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-leaflet": "^4.2.1",
     "remark-gfm": "^4.0.0",
     "sonner": "^1.4.41",
     "tailwind-merge": "^2.3.0",
@@ -35,6 +37,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/leaflet": "^1.9.12",
     "@types/node": "^20",
     "@types/react": "^18.3.2",
     "@types/react-dom": "^18.3.0",
