--- a/package.json
+++ b/package.json
@@ -25,10 +25,10 @@
     "geist": "^1.3.0",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.378.0",
-    "next": "14.2.3",
+    "next": "15.0.0-rc.0",
     "next-themes": "^0.3.0",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
+    "react": "19.0.0-rc.0",
+    "react-dom": "19.0.0-rc.0",
     "react-leaflet": "^4.2.1",
     "remark-gfm": "^4.0.0",
     "sonner": "^1.4.41",
